--- a/site/rewriting_for_scale.html
+++ b/site/rewriting_for_scale.html
@@ -10,8 +10,8 @@
 <p>
 <a href="does_it_do_any_better.html">&lt;&lt;&nbsp;&nbsp;does it do any better?</a>&nbsp;&nbsp;&nbsp;
 <a href="index.html">index</a>&nbsp;&nbsp;&nbsp;
-COMING SOON: how does v2 go?
-x</p>
+<a href="does_it_do_any_better_v2.html">how does v2 go?&nbsp;&nbsp;&gt;&gt;</a>
+</p>
 
 <h1>v2: rewriting for scale</h1>
 
@@ -377,7 +377,7 @@ but now it's only just 'read', the additional content from doc 6 (fashion) has b
 </p>
 
 <p>
-here's LINK <a href="">the code</a> for this new implementation. how does this one do? and does it scale? LINK <a href="">let's have a look</a>
+here's <a href="http://github.com/matpalm/semisupervised_naive_bayes/tree/v3_multinominal_rewrite/">the code</a> for this new implementation. how does this one do? and does it scale? <a href="does_it_do_any_better_v2.html">let's have a look</a>
 </p>
 
 <p>
